--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>2. События и состояние - 1. Портфолио с фильтрами. - 2. Расположение товаров.
+  <title>(RA-34) 2. События и состояние - 1. Портфолио с фильтрами. - 2. Расположение товаров. - 3. Выпадающий список..
   </title>
 </head>
 
